Updated the HTML and ZIP to included embedded audio

--- a/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 1/index.html
+++ b/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 1/index.html
@@ -15,10 +15,12 @@
 
     <div id="story" class="container">
         <h1>Discovering Canis Villa | Chapter 1</h1>
+        <div align="center"><audio src="http://www.regioscientiae.com/files/theme/fx-valleys.mp3" controls autoplay loop></div>
     </div>
 
     <script src="ink.js"></script>
     <script src="Discovering Canis Villa | Chapter 1.js"></script>
     <script src="main.js"></script>
+</audio>
 </body>
 </html>
