--- a/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 2/index.html
+++ b/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 2/index.html
@@ -15,6 +15,8 @@
 
     <div id="story" class="container">
         <h1>Discovering Canis Villa | Chapter 2</h1>
+		<div align="center"><audio src="http://www.regioscientiae.com/files/theme/fx-village.mp3" controls autoplay loop></div>
+
     </div>
 
     <script src="ink.js"></script>
